Update arch diagram for k8s deployment and other editorial changes

--- a/aks-test-webapp-k8s-templates/network-policy-allow.yaml
+++ b/aks-test-webapp-k8s-templates/network-policy-allow.yaml
@@ -18,3 +18,4 @@ spec:
       ports:
         - protocol: TCP
           port: 80
+    # To add other allow rules that allows connection from other PODs
